Mensaje de actualización

--- a/contacto.html
+++ b/contacto.html
@@ -52,7 +52,7 @@
         </div>
         <div class="contact-info-item">
           <div class="ci-box">📧</div>
-          <div class="ci-text"><a href="/cdn-cgi/l/email-protection#472e292128073432372235242635342e293322352926332e2829262b6924282a"><span class="__cf_email__" data-cfemail="0f666169604f7c7a7f6a7d6c6e7d7c66617b6a7d616e7b6660616e63216c6062">[email&#160;protected]</span></a></div>
+          <div class="ci-text"><a href="mailto:info@supercarsinternational.com">info@supercarsinternational.com</a></div>
         </div>
         <div class="contact-info-item">
           <div class="ci-box">📍</div>
@@ -122,4 +122,31 @@
       <div class="wa-box">
         <div class="wa-box-title">Respuesta Inmediata</div>
         <p>Nuestro equipo está disponible por WhatsApp para atenderte ahora mismo.</p>
-        <a href="https://wa.me/58422024582" target="_b
+        <a href="https://wa.me/58422024582" target="_blank" class="btn-dark" style="font-size:8.5px">💬 Abrir WhatsApp</a>
+      </div>
+    </div><!-- /contact-form-side -->
+
+  </div><!-- /contact-layout -->
+
+  <footer>
+    <div class="footer-top-nav">
+      <div class="footer-logo"><img src="assets/logo.png" alt="Super Cars International"></div>
+      <nav class="footer-nav-links">
+        <a href="catalogo.html">Catálogo</a>
+        <a href="servicios.html">Servicios</a>
+        <a href="proceso.html">Proceso de Compra</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
+    </div>
+    <div class="footer-legal-row">
+      <div class="footer-legal-block">
+        <span class="footer-legal-main">© Super Cars International 2026 — Todos los derechos reservados.</span>
+        <span class="footer-legal-sub">Venezuela: Super Cars International C.A. RIF J-000000 &nbsp;&nbsp;—&nbsp;&nbsp; China: Super Cars International CO. LTD License #0000000</span>
+      </div>
+      <span class="footer-powered">Powered by <span>Octavio Caamaño Developer</span></span>
+    </div>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+</html>
