Mensaje de actualización

--- a/catalogo.html
+++ b/catalogo.html
@@ -26,7 +26,6 @@
       <li><a href="contacto.html">Contacto</a></li>
     </ul>
     <a class="nav-cta" href="contacto.html">Cotizar →</a>
-
     <button class="nav-hamburger" id="navHamburger"><span></span><span></span><span></span></button>
   </nav>
   <div class="nav-drawer" id="navDrawer">
@@ -36,7 +35,7 @@
 
   <!-- HERO -->
   <div class="page-hero">
-    <div class="page-hero-bg" style="background-image:url('https://images.unsplash.com/photo-1621007947382-bb3c3994e3fb?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"></div>
+    <div class="page-hero-bg" style="background-image:url('https://images.unsplash.com/photo-1544636331-e26879cd4d9b?w=1800&q=85')"></div>
     <div class="page-hero-overlay"></div>
     <div class="page-hero-content">
       <div class="tag-line">Inventario</div>
@@ -64,10 +63,10 @@
 
   <!-- CTA -->
   <div class="cta-band rev" style="margin-top:1px">
-    <svg class="cta-band-car" viewBox="0 0 400 120" fill="none"><path d="M30 80 C40 80 50 76 70 68 L110 56 C130 52 150 48 170 48 L220 48 C240 48 258 52 272 60 L306 72 C320 76 334 80 346 80 L370 80" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round"/><circle cx="108" cy="80" r="16" stroke="white" stroke-width="2.5" fill="none"/><circle cx="302" cy="80" r="16" stroke="white" stroke-width="2.5" fill="none"/></svg>
+    <img class="cta-band-car" src="assets/logo.png" alt="">
     <div style="position:relative;z-index:1">
-      <div class="tag-line">— ¿No encontrás el vehiculo que buscas?</div>
-      <h2 class="display-m" style="color:var(--paper);margin-top:12px">Lo buscamos<br>por ti en China.</h2>
+      <div class="tag-line">— ¿No encontrás tu auto?</div>
+      <h2 class="display-m" style="color:var(--paper);margin-top:12px">Lo buscamos<br>por vos en China.</h2>
     </div>
     <div class="cta-band-actions">
       <a href="contacto.html" class="btn-outline-white">Pedir modelo específico →</a>
