--- a/index.html
+++ b/index.html
@@ -305,12 +305,7 @@
 
   <!-- CTA BAND -->
   <div class="cta-band rev">
-    <svg class="cta-band-car" viewBox="0 0 400 120" fill="none">
-      <path d="M30 80 C40 80 50 76 70 68 L110 56 C130 52 150 48 170 48 L220 48 C240 48 258 52 272 60 L306 72 C320 76 334 80 346 80 L370 80" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round"/>
-      <path d="M110 56 L130 40 C140 32 158 28 178 28 L222 28 C242 28 260 34 272 44 L298 60" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round"/>
-      <circle cx="108" cy="80" r="16" stroke="white" stroke-width="2.5" fill="none"/>
-      <circle cx="302" cy="80" r="16" stroke="white" stroke-width="2.5" fill="none"/>
-    </svg>
+    <img class="cta-band-car" src="assets/logo.png" alt="">
     <div style="position:relative;z-index:1">
       <div class="tag-line">— ¿Listo para empezar?</div>
       <h2 class="display-m" style="color:var(--paper);margin-top:12px">Tu próximo auto<br>viene de China.</h2>
