Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <blockquote class="brand-story-quote">
         "Creemos que todos merecen acceso a un vehículo de calidad, importado directamente desde origen, con transparencia total en cada paso."
       </blockquote>
-      <p class="body-text" style="max-width:400px">Super Cars International nació para eliminar intermediarios y acercar los mejores vehículos del mundo — especialmente desde China a Venezuela y Latinoamérica.</p>
+      <p class="body-text" style="max-width:400px">Super Cars International nació para eliminar intermediarios y acercar los mejores vehículos del mundo — especialmente desde China a Venezuela y nivel mundial.</p>
       <div class="brand-story-cite" style="margin-top:28px">— Fundadores, Super Cars International</div>
     </div>
   </section>
