Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <img class="cta-band-car" src="assets/logo.png" alt="">
     <div style="position:relative;z-index:1">
       <div class="tag-line">— ¿Listo para empezar?</div>
-      <h2 class="display-m" style="color:var(--paper);margin-top:12px">El auto de tus sueños<br>te lo llevamos de China.</h2>
+      <h2 class="display-m" style="color:var(--paper);margin-top:12px">El auto de tus sueños<br>a donde te encuentres.</h2>
     </div>
     <div class="cta-band-actions">
       <a href="catalogo.html" class="btn-outline-white">Ver Catálogo</a>
