Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
   <!-- STATS BAND -->
   <section class="stats-band">
     <div class="stat-block rev">
-      <span class="stat-num">19<sup>+</sup></span>
-      <span class="stat-label">Modelos Toyota</span>
-      <span class="stat-sub">RAV4, Highlander, Frontlander, Camry, Corolla Cross y Levin.</span>
+      <span class="stat-num">Toyota<sup>+</sup></span>
+      <span class="stat-label">Modelos Toyota mas vendidos</span>
+      <span class="stat-sub">Camry, Corolla Cross y Levin,RAV4, Highlander, Frontlander./span>
     </div>
     <div class="stat-block rev" style="transition-delay:.04s">
       <span class="stat-num">Usados</span>
