--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <!-- STATS BAND -->
   <section class="stats-band">
     <div class="stat-block rev">
-      <span class="stat-num">Toyota<sup>+</sup></span>
+      <span class="stat-num">Toyota<sup></sup></span>
       <span class="stat-label">Modelos Toyota mas vendidos</span>
       <span class="stat-sub">Camry, Corolla Cross y Levin,RAV4, Highlander, Frontlander./span>
     </div>
