Mensaje de actualización

--- a/catalogo.html
+++ b/catalogo.html
@@ -66,7 +66,7 @@
     <img class="cta-band-car" src="assets/logo.png" alt="">
     <div style="position:relative;z-index:1">
       <div class="tag-line">— ¿No encontrás tu auto?</div>
-      <h2 class="display-m" style="color:var(--paper);margin-top:12px">Lo buscamos<br>por vos en China.</h2>
+      <h2 class="display-m" style="color:var(--paper);margin-top:12px">Lo buscamos<br>por ti en China.</h2>
     </div>
     <div class="cta-band-actions">
       <a href="contacto.html" class="btn-outline-white">Pedir modelo específico →</a>
