--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="stat-block rev">
       <span class="stat-num">Toyota<sup></sup></span>
       <span class="stat-label">Modelos Toyota mas vendidos</span>
-      <span class="stat-sub">Camry, Corolla Cross,Corolla Levin,RAV4, Highlander, Frontlander./span>
+      <span class="stat-sub">Camry, Corolla Cross,Corolla Levin,RAV4, Highlander, Frontlander. </span>
     </div>
     <div class="stat-block rev" style="transition-delay:.04s">
       <span class="stat-num">Usados</span>
