Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <section class="stats-band">
     <div class="stat-block rev">
       <span class="stat-num">Toyota<sup></sup></span>
-      <span class="stat-label">Modelos Toyota mas vendidos</span>
+      <span class="stat-label">Modelos mas vendidos</span>
       <span class="stat-sub">Camry, Corolla Cross,Corolla Levin,RAV4, Highlander, Frontlander. </span>
     </div>
     <div class="stat-block rev" style="transition-delay:.04s">
