Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
           <strong>0 KM</strong>
           <span>Todos los vehículos</span>
         </div>
+                <div class="hero-badge">
+          <strong>Nuevos</strong>
+          <span>Directo de los mejores Dealers en China. Sin intermediarios, sin rodaje.</span>
+        </div>
+
         <div class="hero-badge">
           <strong>Usados</strong>
           <span>Con la mas alta calidad e inspeccion</span>
@@ -153,11 +158,6 @@
       <span class="stat-num">Usados</span>
       <span class="stat-label">Con el mejor precio </span>
       <span class="stat-sub">Inspecciones con lujo de detalle.</span>
-    </div>
-    <div class="stat-block rev" style="transition-delay:.08s">
-      <span class="stat-num">0</span>
-      <span class="stat-label">KM — Todos nuevos</span>
-      <span class="stat-sub">Directo de los mejores Dealers en China. Sin intermediarios, sin rodaje.</span>
     </div>
     <div class="stat-block rev" style="transition-delay:.16s">
       <span class="stat-num">90</span>
