Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
                 <div class="hero-badge">
           <strong>Nuevos</strong>
-          <span>Directo de los mejores Dealers en China. Sin intermediarios, sin rodaje.</span>
+          <span>Directo de los mejores Dealers en China</span>
         </div>
 
         <div class="hero-badge">
