Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
       <span class="stat-sub">Inspecciones con lujo de detalle.</span>
     </div>
     <div class="stat-block rev" style="transition-delay:.16s">
+      <span class="stat-num">100</span>
+      <span class="stat-label">Unidades entregadas</span>
+      <span class="stat-sub">De Vehiculos multimarca</span>
+    </div>
+    <div class="stat-block rev" style="transition-delay:.16s">
       <span class="stat-num">90</span>
       <span class="stat-label">Días promedio</span>
       <span class="stat-sub">De origen en China a entrega legalizada en Venezuela.</span>
