Mensaje de actualización

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
           <strong>100+</strong>
           <span>Entregados</span>
         </div>
+
+        
         <div class="hero-scroll">Scroll <span></span></div>
       </div>
         </section>
@@ -160,7 +162,7 @@
       <span class="stat-sub">Inspecciones con lujo de detalle.</span>
     </div>
     <div class="stat-block rev" style="transition-delay:.16s">
-      <span class="stat-num">100</span>
+      <span class="stat-num">+100</span>
       <span class="stat-label">Unidades entregadas</span>
       <span class="stat-sub">De Vehiculos multimarca</span>
     </div>
