Mensaje de actualización

--- a/contacto.html
+++ b/contacto.html
@@ -39,11 +39,12 @@
     <!-- VISUAL SIDE -->
     <div class="contact-visual">
       <div class="tag-line">Estamos para vos</div>
+      
       <div class="contact-big-title">
-        Hablemos<br>
+              Hablemos<br>
         <span style="font-weight:200">de tu</span><br>
         próximo<br>
-        <span style="font-weight:200;color:rgba(255,255,255,.55)">auto.</span>
+        <span style="font-weight:200;color:rgba(255,255,255,.55)">Vehiculo.</span>
       </div>
       <div style="margin-top:36px">
         <div class="contact-info-item">
