--- a/contacto.html
+++ b/contacto.html
@@ -180,7 +180,7 @@
         </div>
         <div>
           <span class="cfi-label">Email</span>
-          <a class="cfi-value" href="mailto:info@supercarsinternational.com">info@supercarsinternational.com</a>
+          <a class="cfi-value" href="mailto:info@supercars-international.com">info@supercarsinternational.com</a>
         </div>
       </div>
       <div class="cfi-item">
@@ -189,7 +189,7 @@
         </div>
         <div>
           <span class="cfi-label">Ubicación</span>
-          <span class="cfi-value">Shanghai &amp; Guangzhou, China</span>
+          <span class="cfi-value"> Fuli Yinglong Guangchang,76 Huangpu Dadao Xi,Tianhe Qu&amp; Guangzhou, China</span>
         </div>
       </div>
       <div class="cfi-item">
