Mensaje de actualización

--- a/contacto.html
+++ b/contacto.html
@@ -189,7 +189,7 @@
         </div>
         <div>
           <span class="cfi-label">Ubicación</span>
-          <span class="cfi-value"> Fuli Yinglong Guangchang,76 Huangpu Dadao Xi,Tianhe Qu; Guangzhou, China</span>
+          <span class="cfi-value"> Fuli Yinglong Guangchang,76 Huangpu Dadao Xi,Tianhe Qu,Guangzhou,China</span>
         </div>
       </div>
       <div class="cfi-item">
