--- a/corolla-cross-pioneer-2026.html
+++ b/corolla-cross-pioneer-2026.html
@@ -308,7 +308,7 @@ body { cursor: none; }
 <body>
   <div class="cur-dot" id="curDot"></div>
   <div class="cur-ring" id="curRing"></div>
-    <a class="wa-float" href="https://wa.me/58422024582" target="_blank" aria-label="WhatsApp">
+    <a class="wa-float" href="https://wa.me/584220234582" target="_blank" aria-label="WhatsApp">
     <svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
   </a>
 
@@ -507,7 +507,7 @@ body { cursor: none; }
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
               Extras disponibles
             </div>
-            <div class="extras-list" id="extrasList"><div class="extra-item"><span>➕ Tapicería cuero</span><span>+ US$ 1.200</span></div></div>
+            <div class="extras-list" id="extrasList"><div class="extra-item"><span>🔧 Cauchos premium</span><span>+ US$ 350</span></div><div class="extra-item"><span>✨ Rines deportivos</span><span>+ US$ 480</span></div><div class="extra-item"><span>📺 Pantalla grande español</span><span>+ US$ 380</span></div><div class="extra-item"><span>💺 Asiento eléctrico</span><span>+ US$ 520</span></div><div class="extra-item"><span>🔲 Techo negro</span><span>+ US$ 320</span></div><div class="extra-item"><span>🧳 Maleta eléctrica</span><span>+ US$ 290</span></div><div class="extra-item"><span>📷 Cámara 360°</span><span>+ US$ 450</span></div><div class="extra-item"><span>📡 Sensores de proximidad</span><span>+ US$ 220</span></div></div></div>
 
                   <div class="final-price-box">
                     <div class="bajo-pedido-badge">Bajo Pedido</div>
@@ -539,13 +539,13 @@ body { cursor: none; }
         <!-- SERVICE FEE -->
         <div class="service-fee-bar">
           <span class="sf-label">Tasa fija de servicio</span>
-          <span class="sf-value">US$ 1.500,00</span>
+          <span class="sf-value">US$ 1.000,00</span>
         </div>
 
         <!-- CTA BAR -->
         <div class="vd-cta-bar">
           <a href="contacto.html" class="vd-btn-buy">Comprar</a>
-          <a href="https://wa.me/58422024582?text=Hola!%20Me%20interesa%20el%20Corolla%20Cross%20Pioneer%20Version%202026" target="_blank" class="vd-btn-wa">💬 Lo Quiero</a>
+          <a href="https://wa.me/584220234582?text=Hola!%20Me%20interesa%20el%20Corolla%20Cross%20Pioneer%20Version%202026" target="_blank" class="vd-btn-wa">💬 Lo Quiero</a>
         </div>
 
       </div><!-- /vd-info -->
