--- a/catalogo.html
+++ b/catalogo.html
@@ -35,7 +35,7 @@
 
   <!-- HERO -->
   <div class="page-hero">
-    <div class="page-hero-bg" style="background-image:url('https://images.unsplash.com/photo-1621007947382-bb3c3994e3fb?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"></div>
+    <div class="page-hero-bg" style="background-image:url('https://images.unsplash.com/photo-1544636331-e26879cd4d9b?w=1800&q=85')"></div>
     <div class="page-hero-overlay"></div>
     <div class="page-hero-content">
       <div class="tag-line">Inventario</div>
