Mensaje de actualización

--- a/catalogo.html
+++ b/catalogo.html
@@ -65,7 +65,7 @@
   <div class="cta-band rev" style="margin-top:1px">
     <img class="cta-band-car" src="assets/logo.png" alt="">
     <div style="position:relative;z-index:1">
-      <div class="tag-line">— ¿No encontrás tu auto?</div>
+      <div class="tag-line">— ¿No encontrás el vehiculo que buscas?</div>
       <h2 class="display-m" style="color:var(--paper);margin-top:12px">Lo buscamos<br>por ti en China.</h2>
     </div>
     <div class="cta-band-actions">
